--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -22,6 +22,9 @@
     --textRgba-text: hsl(0 0% 100%);
     --grey-text: hsl(0 0% 75%);
   }
+  body:has(.hide-root-scrollbar) {
+    overflow: hidden;
+  }
   .btn-clip {
     clip-path: polygon(0 0, 100% 0, 80% 100%, 20% 100%);
   }
