refactor: improve responsiveness

--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -3,6 +3,9 @@
 @import "tailwindcss/utilities";
 
 @layer base {
+  html {
+    scroll-behavior: smooth;
+  }
   :root {
     --body: 0 0% 13%;
     --text: 0 0% 100%;
@@ -14,7 +17,6 @@
     font-family: "Sirin Stencil";
     overflow-x: hidden;
     background-color: white;
-    scroll-behavior: smooth;
 
     --body-text: hsl(0 0% 13%);
     --text-text: hsl(0 0% 100%);
